[package]
name = "advent2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.12"
indicatif = { version = "0.17.7", features = ["rayon"] }
itertools = "0.12.0"
rayon = "1.8.0"
regex = "1.10.2"
